--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
@@ -30,15 +30,16 @@ jobs:
           source: "target/*.jar"
           target: "~/springboot-app/app.jar"
 
-      - name: Start Spring Boot app on EC2
+      - name: Restart Spring Boot app on EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
+            APP_PATH="$HOME/springboot-app/app.jar"
             echo "Checking for existing app process..."
-            PID=$(pgrep -f 'java -jar ~/springboot-app/app.jar') || true
+            PID=$(pgrep -f "java -jar $APP_PATH") || true
             if [ -n "$PID" ]; then
               echo "Stopping existing app with PID $PID"
               kill $PID
@@ -48,11 +49,17 @@ jobs:
             fi
 
             echo "Starting Spring Boot app..."
-            nohup java -jar ~/springboot-app/app.jar > ~/springboot-app/app.log 2>&1 &
-            echo "App started."
+            nohup java -jar $APP_PATH > $HOME/springboot-app/app.log 2>&1 &
+            sleep 2
+            NEW_PID=$(pgrep -f "java -jar $APP_PATH" || true)
+            if [ -n "$NEW_PID" ]; then
+              echo "App started successfully with PID $NEW_PID"
+            else
+              echo "Failed to start app!"
+            fi
 
-            sleep 5
             echo "Last 20 lines of app.log:"
-            tail -n 20 ~/springboot-app/app.log
+            tail -n 20 $HOME/springboot-app/app.log
+
 
 
