--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,19 @@
-name: Deploy Spring Boot to EC2
+name: Build and Deploy Spring Boot App to EC2
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up Java
         uses: actions/setup-java@v3
         with:
           java-version: '17'
@@ -21,13 +22,24 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      - name: Create target directory on EC2
+      - name: List built JAR
+        run: ls -lh target/*.jar
+
+      - name: Ensure target folder exists on EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: mkdir -p ~/springboot-app/target
+
+      - name: Delete old JAR from EC2
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: rm -f ~/springboot-app/target/*.jar
 
       - name: Copy JAR to EC2
         uses: appleboy/scp-action@v0.1.7
@@ -37,6 +49,9 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           source: "target/*.jar"
           target: "~/springboot-app/target"
+
+      - name: Wait briefly before restarting
+        run: sleep 3
 
       - name: Restart Spring Boot app on EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -57,12 +72,15 @@ jobs:
 
             echo "Starting Spring Boot app..."
             JAR_FILE=$(ls ~/springboot-app/target/*.jar | head -n 1)
-            nohup java -jar "$JAR_FILE" > ~/springboot-app/app.log 2>&1 &
-            echo "App started."
+            if [ -f "$JAR_FILE" ]; then
+              nohup java -jar "$JAR_FILE" > ~/springboot-app/app.log 2>&1 &
+              echo "App started."
+            else
+              echo "ERROR: JAR file not found!"
+              exit 1
+            fi
 
             sleep 5
             echo "Last 20 lines of app.log:"
             tail -n 20 ~/springboot-app/app.log
-
-
 
