--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Spring Boot App to EC2
+name: Deploy Spring Boot to EC2
 
 on:
   push:
@@ -6,99 +6,35 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+    - name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
+    - name: Build with Maven
+      run: mvn clean package -DskipTests
 
-      - name: List built JAR
-        run: ls -lh target/*.jar
+    - name: Save PEM key from secret
+      run: |
+        echo "${{ secrets.EC2_PEM_KEY }}" > ec2-key.pem
+        chmod 400 ec2-key.pem
 
-      - name: Ensure target folder exists on EC2
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: mkdir -p ~/springboot-app/target
+    - name: Copy jar to EC2
+      run: |
+        scp -o StrictHostKeyChecking=no -i ec2-key.pem target/*.jar ec2-user@${{ secrets.EC2_HOST }}:~/springboot-app/app.jar
 
-      - name: Delete old JAR from EC2
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: rm -f ~/springboot-app/target/*.jar
+    - name: Restart Spring Boot on EC2
+      run: |
+        ssh -o StrictHostKeyChecking=no -i ec2-key.pem ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
+          pkill -f 'java -jar' || true
+          nohup java -jar ~/springboot-app/app.jar > app.log 2>&1 &
+        EOF
 
-      - name: Copy JAR to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          source: "target/*.jar"
-          target: "~/springboot-app/target"
-
-      - name: Wait briefly before restarting
-        run: sleep 3
-
-      - name: Restart Spring Boot app on EC2
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            echo "Checking for existing app process..."
-            PID=$(pgrep -f 'java -jar') || true
-            if [ -n "$PID" ]; then
-              echo "Stopping existing app with PID $PID"
-              kill $PID
-              sleep 5
-            else
-              echo "No running app found."
-            fi
-
-            echo "Starting Spring Boot app..."
-            JAR_FILE=$(ls ~/springboot-app/target/*.jar | head -n 1)
-            if [ -f "$JAR_FILE" ]; then
-              cd ~/springboot-app/target
-              setsid nohup java -jar "$JAR_FILE" > ../app.log 2>&1 < /dev/null &
-              disown
-              echo "App started and detached."
-            else
-              echo "ERROR: JAR file not found!"
-              exit 1
-            fi
-
-            sleep 5
-            echo "Last 20 lines of app.log:"
-            tail -n 20 ~/springboot-app/app.log
-
-            echo "Performing health check on http://localhost:8080..."
-            for i in {1..10}; do
-              STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080)
-              if [ "$STATUS" == "200" ]; then
-                echo "✅ Health check passed. App is running."
-                break
-              else
-                echo "Waiting for app... (HTTP $STATUS)"
-                sleep 3
-              fi
-
-              if [ "$i" -eq 10 ]; then
-                echo "❌ Health check failed. App did not respond on port 8080."
-                exit 1
-              fi
-            done
